@@ -1,3 +1,9 @@
+2017-05-09 ddos_detector-1.0.2
+	renamed output fields
+	changed the rule of detection - windows before flood can not be empty
+	changed the method of counting source addresses - hash table only for actual window
+
+
 2017-04-28 ddos_detector-1.0.1
 	updated README
 	fixed memory bug
